fix(text): update disabled color in contrast mode

--- a/packages/components/src/text/Text.module.css
+++ b/packages/components/src/text/Text.module.css
@@ -28,11 +28,19 @@
 
   &:has(~ [data-disabled]) {
     color: var(--midas-text-disabled);
+
+    @media (forced-colors: active) {
+      color: GrayText;
+    }
   }
 }
 
 [data-disabled] {
   > .description {
     color: var(--midas-text-disabled);
+
+    @media (forced-colors: active) {
+      color: GrayText;
+    }
   }
 }
